# CPP-Project-Templates

./: .gitignore
Basic/: CMakeLists.txt
OpenGL/: CMakeLists.txt  PROJECT_NAME_CHANGE_ME
OpenGL/src/: Main.cpp
OpenGL/src/Glad/: glad.c  glad.h
OpenGLFPS/src/: Main.cpp  ShaderLoader.cpp
OpenGLFPS/src/Input/: Mouse.cpp  Mouse.h
SFML/: CMakeLists.txt
opengl/: CMakeLists.txt
opengl/src/: Main.cpp
opengl_fps/: CMakeLists.txt
opengl_sdl/: CMakeLists.txt  PROJECT_NAME
opengl_sdl/src/: Main.c  ShaderLoader.c  ShaderLoader.h
sfml/: CMakeLists.txt
